# Szczypior-Discord-Bot

./: .dockerignore  .env.example  .gitignore  .run_tests.ps1  DEPLOYMENT.md  DISCORD_PERMISSIONS_FIX.md  Dockerfile  EXAMPLES.md  LICENSE  MEMORY_OPTIMIZATION.md  QUICKSTART.md  README.md  bot.Dockerfile  config.json  context.md  dbserives.Dockerfile  diff.txt  discord_users_info.json  docker-compose.dev.yml  docker-compose.yml  fly.toml  fly.toml.bot.tmp  fly.toml.tmp  package-lock.json  package.json  plan.md  plim.md  pyproject.toml  pytest.ini  repo.md  requirements-dev.txt  requirements.txt  setup_google_auth.py  show_user_info.py  start.sh  tailwind.config.ts  test_sheets_connection.py  test_time_extraction.py  vulture_output.txt  🐍 Wdrożenie Bota Discord (Python) na Fl.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml  docker-compose.devcontainer.yml  postCreate.sh
services/db-service/: .dockerignore  README.md  deploy.sh  fly.toml  pyproject.toml  pyrightconfig.json  requirements.txt
services/db-service/app/: __init__.py  main.py
services/db-service/app/api/: auth.py  routes.py
services/db-service/app/core/: config.py
services/db-service/app/db/: models.py  session.py
services/db-service/app/schemas/: __init__.py  activity.py  activity_rule.py  challenge.py  event.py  user.py
services/db-service/app/services/: activity_manager.py  challenges_manager.py  db_manager.py  events_manager.py  users_manager.py
services/discord-bot-szczypior/: config.json  deploy.ps1  deploy.sh  fly.toml  pyproject.toml  requirements.txt  run.py
services/discord-bot-szczypior/ai/: chains.py  graphs.py  models.py  prompts.py  schemas.py  services.py  tools.py
services/discord-bot-szczypior/api/: __init__.py  api_menager.py
services/discord-bot-szczypior/bot/: api_menager.py  config_manager.py  constants.py  exceptions.py  main.py  message_handler.py  orchestrator.py  sheets_manager.py  utils.py
services/discord-bot-szczypior/bot/llm_clients/: __init__.py  gemini_client.py  openrouter_client.py  rate_limiter.py
services/discord-bot-szczypior/bot/old_logic/: orchestrator.py
services/discord-bot-szczypior/bot/old_logic/llm_clients/: __init__.py  base_client.py  openrouter_client.py
services/discord-bot-szczypior/utils/: __init__.py  calculations.py
services/web-dashboard/: RAILWAY_DEPLOYMENT.md  README.md  pyproject.toml  railway.json  requirements.txt  test-docker.sh
services/web-dashboard/dashboard/: models.py  serializers.py  views.py
services/web-dashboard/react/: index.html  package-lock.json  package.json  railway.json  vite.config.ts
services/web-dashboard/react/src/: App.tsx  vite-env.d.ts
services/web-dashboard/react/src/api/: djangoClient.ts
services/web-dashboard/react/src/auth/: supabaseClient.ts
services/web-dashboard/react/src/components/: ProtectedRoute.tsx  StatCard.tsx
services/web-dashboard/react/src/config/: runtimeEnv.ts
services/web-dashboard/react/src/context/: AuthContext.tsx
services/web-dashboard/react/src/hooks/: useActivities.ts  useChallenges.ts
services/web-dashboard/react/src/lib/: eventsData.ts
services/web-dashboard/react/src/pages/: AdminPage.tsx  DashboardPage.tsx  HistoryPage.tsx  HomePage.tsx  RankingPage.tsx  RulesPage.tsx  StatsPage.tsx
services/web-dashboard/static/react-app/: index.html
services/web-dashboard/static/react-app/assets/: index-Bk9mcLNr.css  index-CMvh_Dx_.js
services/web-dashboard/templates/: index.html
services/web-dashboard/webdashboard/: asgi.py  settings.py  urls.py  wsgi.py
(+119 files in other folders)
