[project]
name = "db-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.37",
    "uvicorn[standard]>=0.35.0",
]
