[project]
name = "discord-bot-szczypior"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
    "discord.py>=2.3.0",
    "google-genai>=1.68.0",
    "gspread>=5.12.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "pillow>=10.1.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]
