[project]
name = "web-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography==44.0.0",
    "django==5.0.7",
    "django-cors-headers==4.4.0",
    "djangorestframework==3.15.2",
    "gunicorn==23.0.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt==2.9.0",
    "python-dotenv>=1.1.0",
    "whitenoise==6.8.0",
]
